# nixos-configs

./: .flake.nix.swp  .gitattributes  .gitignore  README.md  flake.nix  gpg-agent.conf  shell.nix
.config/fish/: config.fish  fish_variables
.config/herbstluftwm/: autostart
.config/kitty/: kitty.conf
.doom.d/: config.el  custom.el  init.el  packages.el
config/conky/: catppuccin.conkyrc  gruvbox-dark.conkyrc  nord.conkyrc
config/doom/: config.el  init.el
config/eww/: eww.yuck
config/herbstluftwm/: autostart
config/polybar/: .polybar.ini.swp  bars.ini  colors.ini  config.ini  launch.sh  modules.ini  polybar.ini  preview.ini  user_modules.ini
config/rofi/: config.rasi
config/xmonad/: flake.nix  tejasag-xmonad.cabal  xmonad.hs
delphin/: flake.nix  result
delphin/system/: configuration.nix
delphin/user/: config.nix  home.nix
home/: .default.nix.swp  default.nix  minimal.nix  tejasagarwal.nix  tilde.nix
home/minimal/: default.nix  pkgs.json
home/programs/: fish.nix  git.nix
home/tejasagarwal/: default.nix  pkgs.json
hosts/delphin/: .default.nix.swp  configuration.nix  default.nix  hardware-configuration.nix
hydrogen/: README.md  h
hydrogen/src/: bashly.yml  search_command.sh  shell_command.sh  test_command.sh  update_command.sh
lib/: default.nix  get-pkgs.nix  mk-home.nix
modules/: .neovim.nix.swo  emacs.nix  fish.nix  git.nix  kitty.nix  neovim.nix  picom.nix  vim.nix
nixos/: configuration.nix
nixpkgs/: home.nix
nixpkgs/wm/: xmonad.nix
overlays/: default.nix
scripts/: apply-system.sh  apply-user.sh  test-system.sh  update.sh
(+105 files in other folders)
