cabal-version:      2.4
name:               tejasag-xmonad
version:            0.1.0.0

common common
  default-language:      Haskell2010
  default-extensions:
    LambdaCase
  ghc-options:
    -Wall

executable tejasag-xmonad
    import:           common
    main-is:          xmonad.hs
    build-depends:
        base,
        xmonad,
        xmonad-contrib,
        X11,
        containers,
        utf8-string,
